--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
     "expo": "^34.0.1",
     "expo-asset": "^6.0.0",
     "expo-constants": "6.0.0",
-    "expo-font": "~6.0.0",
+    "expo-font": "^6.0.1",
     "expo-web-browser": "6.0.0",
+    "native-base": "^2.13.4",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-web": "^0.11.4",
-    "react-navigation": "^3.11.0",
-    "ws": ">=3.3.1"
+    "react-navigation": "^3.11.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^6.0.0",
