--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-gesture-handler": "~1.3.0",
+    "react-native-google-places": "^3.1.2",
+    "react-native-google-places-autocomplete": "^1.3.9",
     "react-native-web": "^0.11.4",
     "react-navigation": "^3.11.0"
   },
