--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@react-navigation/web": "^1.0.0-alpha.9",
     "expo": "^34.0.1",
     "expo-asset": "^6.0.0",
+    "expo-cli": "^3.0.9",
     "expo-constants": "6.0.0",
     "expo-font": "^6.0.1",
     "expo-web-browser": "6.0.0",
+    "firebase": "^6.3.5",
     "native-base": "^2.13.4",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
