--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@expo/samples": "~3.0.3",
     "@expo/vector-icons": "^10.0.3",
     "@react-navigation/web": "^1.0.0-alpha.9",
+    "date": "^1.0.2",
     "expo": "^34.0.1",
     "expo-asset": "^6.0.0",
     "expo-cli": "^3.0.9",
@@ -22,6 +23,7 @@
     "expo-font": "^6.0.1",
     "expo-web-browser": "6.0.0",
     "firebase": "^6.3.5",
+    "moment": "^2.24.0",
     "native-base": "^2.13.4",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
