--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "native-base": "^2.13.4",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
+    "react-moment": "^0.9.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-google-places": "^3.1.2",
