--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "splash": {
-      "image": "./assets/images/loading.jpg",
+      "image": "./assets/images/loading.png",
       "resizeMode": "contain",
       "backgroundColor": "#000000"
     },
