--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-native-google-places": "^3.1.2",
     "react-native-google-places-autocomplete": "^1.3.9",
     "react-native-web": "^0.11.4",
-    "react-navigation": "^3.11.0"
+    "react-navigation": "^3.11.0",
+    "unsplash-js": "^5.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^6.0.0",
